<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="155dp"
        android:layout_height="249dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popcorn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="@dimen/font_xl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editCorreoLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="60"
        android:textSize="@dimen/font_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editPWLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/login_contrasena_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:textSize="@dimen/font_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/editCorreoLogin" />

    <CheckBox
        android:id="@+id/checkRecordarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_check_text"
        android:textColor="@color/gray"
        android:textSize="@dimen/font_xs"
        app:layout_constraintStart_toStartOf="@+id/editPWLogin"
        app:layout_constraintTop_toBottomOf="@+id/editPWLogin" />

    <TextView
        android:id="@+id/txtOlvidoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/login_contrasena_text"
        android:textColor="@color/colorPrimary2"
        android:textSize="@dimen/font_xs"
        app:layout_constraintEnd_toEndOf="@+id/editPWLogin"
        app:layout_constraintTop_toBottomOf="@+id/editPWLogin" />

    <Button
        android:id="@+id/btnIngresarLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorWarning"
        android:text="@string/login_btn_text"
        android:textColor="@color/blanco"
        app:layout_constraintEnd_toEndOf="@+id/editPWLogin"
        app:layout_constraintStart_toStartOf="@+id/editPWLogin"
        app:layout_constraintTop_toBottomOf="@+id/txtOlvidoLogin" />

    <TextView
        android:id="@+id/txtRegistrarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_crearcuenta_text"
        android:textSize="@dimen/font_xs"
        app:layout_constraintBottom_toTopOf="@+id/txtRegistrar2Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresarLogin" />

    <TextView
        android:id="@+id/txtRegistrar2Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_crearcuenta_btn_text"
        android:textColor="@color/colorPrimary2"
        android:textSize="@dimen/font_xs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistrarLogin" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/editCorreoLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/editPWLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_baseline_lock_24" />
</androidx.constraintlayout.widget.ConstraintLayout>